--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 # Database
-DATABASE_NAME : 'db_dispositivos_electronicos'
-DATABASE_USER : 'postgres'
-DATABASE_PASSWORD : 'postgres'
-DATABASE_HOST : '127.0.0.1'
-DATABASE_DIALECT : 'postgres'
-DATABASE_POOL_MAX : 5
-DATABASE_POOL_MIN : 0
-DATABASE_POOL_ACQUIRE : 30000
-DATABASE_POOL_IDLE : 10000
+DATABASE_NAME = 'db_dispositivos_electronicos'
+DATABASE_USER = 'postgres'
+DATABASE_PASSWORD = 'postgres'
+DATABASE_HOST = '127.0.0.1'
+DATABASE_DIALECT = 'postgres'
+DATABASE_POOL_MAX = 5
+DATABASE_POOL_MIN = 0
+DATABASE_POOL_ACQUIRE = 30000
+DATABASE_POOL_IDLE = 10000
+
+# General
+APP_PORT = 8080
