Added service and controller

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 DATABASE_NAME = 'db_dispositivos_electronicos'
 DATABASE_USER = 'postgres'
 DATABASE_PASSWORD = 'postgres'
-DATABASE_HOST = '127.0.0.1'
+DATABASE_HOST = 127.0.0.1
+DATABASE_PORT = 5432
 DATABASE_DIALECT = 'postgres'
 DATABASE_POOL_MAX = 5
 DATABASE_POOL_MIN = 0
