--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ DATABASE_POOL_IDLE = 10000
 
 # General
 APP_PORT = 8080
+
+# Api config
+API_LOCAL_BASE_URL =  http://localhost:${APP_PORT}
+API_COMPONENT_NAME_URL = '/api/v1/componentes'
