--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
@@ -11,6 +12,9 @@
     "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "name": "apirest_dispositivos_electronicos_expressjs",
   "description": "![Index app](./doc/assets/CRUD_Bucket_s3.drawio.png)",
@@ -29,8 +33,5 @@
   "bugs": {
     "url": "https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS/issues"
   },
-  "homepage": "https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS#readme",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "homepage": "https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS#readme"
 }
