--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ APP_PORT = 8080
 # Api config
 API_LOCAL_BASE_URL =  http://localhost:${APP_PORT}
 API_COMPONENT_NAME_URL = '/api/v1/componentes'
+API_COMPONENT_DETAIL_NAME_URL = '/api/v1/componentes-detalles'
