--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "start:dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
