--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
@@ -14,22 +15,32 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "supertest": "^6.3.3"
   },
   "name": "apirest_dispositivos_electronicos_expressjs",
   "description": "![Index app](./doc/assets/CRUD_Bucket_s3.drawio.png)",
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "start:dev": "nodemon src/server.js",
+    "start:test": "cross-env NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS.git"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "author": "",
   "license": "ISC",
