--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "remark-cli": "^11.0.0",
+    "remark-lint-emphasis-marker": "^3.1.2",
+    "remark-lint-list-item-indent": "^3.1.2",
+    "remark-lint-strong-marker": "^3.1.2",
+    "remark-lint-table-cell-padding": "^4.1.3",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-recommended": "^6.1.3",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^7.0.1",
     "nodemon": "^3.0.1",
@@ -24,7 +31,10 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "check": "remark . --quiet --frail",
+    "format": "remark . --quiet --frail --output",
+    "format-md": "remark . --output",
+    "start": "npm run format-md && node src/server.js",
     "start:dev": "nodemon src/server.js"
   },
   "repository": {
@@ -36,5 +46,29 @@
   "bugs": {
     "url": "https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS/issues"
   },
-  "homepage": "https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS#readme"
+  "homepage": "https://github.com/andresWeitzel/ApiRest_Dispositivos_Electronicos_ExpressJS#readme",
+  "remarkConfig": {
+    "settings": {
+      "emphasis": "*",
+      "strong": "*"
+    }
+  },
+    "plugins": [
+      "remark-preset-lint-consistent",
+      "remark-preset-lint-recommended",
+      "remark-lint",
+      "remark-lint-table-cell-padding",
+      [
+        "remark-lint-list-item-indent",
+        "tab-size"
+      ],
+      [
+        "remark-lint-emphasis-marker",
+        "*"
+      ],
+      [
+        "remark-lint-strong-marker",
+        "*"
+      ]
+    ]
 }
