--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ APP_PORT = 8080
 API_LOCAL_BASE_URL =  http://localhost:${APP_PORT}
 API_COMPONENT_NAME_URL = '/api/v1/componentes'
 API_COMPONENT_DETAIL_NAME_URL = '/api/v1/componentes-detalles'
+API_BIPOLAR_TRANSISTOR_NAME_URL = '/api/v1/transistores-bipolares'
