--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "npm run format-md && node src/server.js",
+    "start": "node src/server.js",
+    "start:format": "npm run format-md && node src/server.js",
     "start:dev": "nodemon src/server.js",
     "format-prettier": "prettier --write \"{src,test}/**/*.{js,ts}\"",
     "check": "remark . --quiet --frail",
