--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start": "node src/server.js",
     "start:format": "npm run format-md && node src/server.js",
     "start:dev": "nodemon src/server.js",
+    "build": "CI=false npm run build",
     "format-prettier": "prettier --write \"{src,test}/**/*.{js,ts}\"",
     "check": "remark . --quiet --frail",
     "format-remark": "remark . --quiet --frail --output",
