Added tests for pagination helpers

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test": "jest --verbose",
     "test:watch": "jest --watch --verbose",
     "test:cov": "jest --coverage --verbose",
-    "test:pagination-helper": "jest --verbose ./src/test/unit-test/helpers/pagination/*"
+    "test:pagination-helpers": "jest --verbose ./src/test/unit-test/helpers/pagination/*"
   },
   "repository": {
     "type": "git",
