Updated mock values

--- a/.env
+++ b/.env
@@ -22,3 +22,8 @@ API_BIPOLAR_TRANSISTOR_NAME_URL = '/api/v1/transistores-bipolares'
 # Mock testing
 MOCK_NUMBER_01 = 1212313
 MOCK_BOOLEAN_01 = true
+MOCK_ID_NAME = 'id'
+MOCK_CODE_NAME = 'codigo'
+MOCK_NRO_PART_NAME = 'nro_pieza'
+MOCK_ORDER_AT_ASC_NAME = 'asc'
+MOCK_ORDER_AT_DESC_NAME = 'desc'
