Added migration and config

--- a/.env
+++ b/.env
@@ -1,20 +1,62 @@
-# Database
-DATABASE_NAME = 'db_dispositivos_electronicos'
-DATABASE_USER = 'postgres'
-DATABASE_PASSWORD = 'postgres'
-DATABASE_HOST = 127.0.0.1
-DATABASE_PORT = 5432
-DATABASE_DIALECT = 'postgres'
-DATABASE_POOL_MAX = 5
-DATABASE_POOL_MIN = 0
-DATABASE_POOL_ACQUIRE = 30000
-DATABASE_POOL_IDLE = 10000
+# ===========================================
+# CONFIGURACIÓN DE BASE DE DATOS POSTGRESQL
+# ===========================================
 
-# General
-APP_PORT = 8080
+# Variables de producción (prioridad alta)
+DB_NAME_PROD=dispositivos_electronicos
+DB_USER_PROD=dispositivos_user
+DB_PASS_PROD=dispositivos_pass
+DB_HOST_PROD=localhost
+DB_DIALECT_PROD=postgres
+DB_PORT_PROD=5432
 
-# Api config
-API_LOCAL_BASE_URL =  http://localhost:${APP_PORT}
-API_COMPONENT_NAME_URL = '/api/v1/componentes'
-API_COMPONENT_DETAIL_NAME_URL = '/api/v1/componentes-detalles'
-API_BIPOLAR_TRANSISTOR_NAME_URL = '/api/v1/transistores-bipolares'
+# Variables de desarrollo (prioridad baja)
+DATABASE_NAME=dispositivos_electronicos
+DATABASE_USER=dispositivos_user
+DATABASE_PASSWORD=dispositivos_pass
+DATABASE_HOST=localhost
+DATABASE_DIALECT=postgres
+DATABASE_PORT=5432
+
+# Configuración del pool de conexiones
+DB_POOL_MAX_PROD=10
+DB_POOL_MIN_PROD=0
+DB_POOL_ACQUIRE_PROD=30000
+DB_POOL_IDLE_PROD=10000
+
+DATABASE_POOL_MAX=10
+DATABASE_POOL_MIN=0
+DATABASE_POOL_ACQUIRE=30000
+DATABASE_POOL_IDLE=10000
+
+# ===========================================
+# CONFIGURACIÓN DE LA APLICACIÓN
+# ===========================================
+
+# Puerto de la aplicación
+PROD_PORT=8082
+APP_PORT=8082
+
+# ===========================================
+# CONFIGURACIÓN DE API ENDPOINTS
+# ===========================================
+
+API_LOCAL_BASE_URL=http://localhost:8082
+API_COMPONENT_NAME_URL=/api/v1/componentes
+API_COMPONENT_DETAIL_NAME_URL=/api/v1/componentes-detalles
+API_BIPOLAR_TRANSISTOR_NAME_URL=/api/v1/transistores-bipolares
+
+# ===========================================
+# VARIABLES PARA TESTING
+# ===========================================
+
+MOCK_NUMBER_01=1212313
+MOCK_BOOLEAN_01=true
+MOCK_STRING_01=MOCK_STRING_01
+MOCK_ID_NAME=id
+MOCK_DATASHEET_NAME=hoja_de_datos
+MOCK_VOLUME_NAME=volumen
+MOCK_CODE_NAME=codigo
+MOCK_NRO_PART_NAME=nro_pieza
+MOCK_ORDER_AT_ASC_NAME=ASC
+MOCK_ORDER_AT_DESC_NAME=DESC
