--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "express-list-endpoints": "^6.0.0",
+    "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "remark-cli": "^11.0.0",
     "remark-lint-emphasis-marker": "^3.1.2",
     "remark-lint-list-item-indent": "^3.1.2",
@@ -21,11 +26,8 @@
     "remark-lint-table-cell-padding": "^4.1.3",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-recommended": "^6.1.3",
-    "express-list-endpoints": "^6.0.0",
-    "express-validator": "^7.0.1",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "jest": "^29.7.0"
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.3"
   },
   "name": "apirest_dispositivos_electronicos_expressjs",
   "description": "![Index app](./doc/assets/CRUD_Bucket_s3.drawio.png)",
@@ -43,7 +45,12 @@
     "test": "jest --verbose",
     "test:watch": "jest --watch --verbose",
     "test:cov": "jest --coverage --verbose",
-    "test:pagination-helpers": "jest --verbose ./src/test/unit-test/helpers/pagination/*"
+    "test:unit": "jest --verbose ./src/test/unit-test",
+    "test:integration": "jest --verbose ./src/test/integration-test",
+    "test:pagination-helpers": "jest --verbose ./src/test/unit-test/helpers/pagination/*",
+    "test:services": "jest --verbose ./src/test/unit-test/services/*",
+    "test:validations": "jest --verbose ./src/test/unit-test/helpers/validations/*",
+    "test:all": "node scripts/run-tests.js"
   },
   "repository": {
     "type": "git",
